// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiLogin /> MultiLogin match baseline snapshot 1`] = `
<styled.form
  onSubmit={[Function]}
>
  <styled.ul
    plainList={true}
  >
    <styled.li
      isActive={false}
      onClick={[Function]}
    >
      Register
    </styled.li>
    <styled.li
      isActive={true}
      onClick={[Function]}
    >
      Login
    </styled.li>
    <styled.li
      isActive={false}
      onClick={[Function]}
    >
      Reset
    </styled.li>
  </styled.ul>
  <styled.span
    position={false}
  />
  <styled.label
    for="user"
  >
    Enter 
    Email or Username
  </styled.label>
  <Input
    autoFocus={true}
    innerRef={[Function]}
    isHidden={false}
    name="user"
    placeholder="Email or Username"
    type="text"
  />
  <styled.label
    for="email"
  >
    Enter email
  </styled.label>
  <Input
    innerRef={[Function]}
    isHidden={true}
    name="email"
    placeholder="Email"
    type="email"
  />
  <styled.label
    for="password"
  >
    Enter account password
  </styled.label>
  <Input
    isHidden={false}
    name="password"
    placeholder="Password"
    type="password"
  />
  <styled.label
    for="confirmPassword"
  >
    Confirm account password
  </styled.label>
  <Input
    isHidden={true}
    name="confirmPassword"
    placeholder="Confirm Password"
    type="password"
  />
  <styled.label
    for="apiKey"
  >
    Enter WaniKani API key
  </styled.label>
  <Input
    isHidden={true}
    name="apiKey"
    placeholder="WaniKani API key"
    type="text"
  />
  <styled.button
    type="submit"
  >
    行こう
  </styled.button>
</styled.form>
`;

exports[`<MultiLogin /> MultiLogin.Form should match snapshot 1`] = `
<form
  className="jgVQpr"
/>
`;

exports[`<MultiLogin /> MultiLogin.Input should match snapshot 1`] = `
<input
  aria-hidden="false"
  autocapitalize="off"
  autocomplete="on"
  autocorrect="off"
  class="cbyRRt"
  id="user"
  name="user"
  placeholder="Username or Email"
  spellcheck="false"
  type="text"
/>
`;

exports[`<MultiLogin /> MultiLogin.Input should match snapshot 2`] = `
<input
  aria-hidden="true"
  autocapitalize="off"
  autocomplete="on"
  autocorrect="off"
  class="cbyRRt"
  disabled=""
  id="user"
  name="user"
  placeholder="Username or Email"
  spellcheck="false"
  type="text"
/>
`;

exports[`<MultiLogin /> MultiLogin.Label should match snapshot 1`] = `
<label
  className="eUACHg"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectList should match snapshot 1`] = `
<ul
  className="hZodql"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectListItem should match snapshot 1`] = `
<li
  className="bLjVnh"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectedPointer should match snapshot 1`] = `
<span
  className="iWKBA"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectedPointer should match snapshot 2`] = `
<span
  className="khvCvr"
/>
`;

exports[`<MultiLogin /> MultiLogin.SelectedPointer should match snapshot 3`] = `
<span
  className="bQqiYH"
/>
`;

exports[`<MultiLogin /> MultiLogin.SubmitButton should match snapshot 1`] = `
<button
  className="lejRaL"
  type="submit"
>
  Submit
</button>
`;
